# backend/api/gen/go/oa/service/v1/workflow.pb.validate.go
@@ -1934,6 +1934,216 @@ var _ interface {
 	ErrorName() string
 } = SubmitApplyResponseValidationError{}
 
+// Validate checks the field values on GetApplyFormRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetApplyFormRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetApplyFormRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetApplyFormRequestMultiError, or nil if none found.
+func (m *GetApplyFormRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetApplyFormRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Code
+
+	// no validation rules for Version
+
+	if len(errors) > 0 {
+		return GetApplyFormRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetApplyFormRequestMultiError is an error wrapping multiple validation
+// errors returned by GetApplyFormRequest.ValidateAll() if the designated
+// constraints aren't met.
+type GetApplyFormRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetApplyFormRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetApplyFormRequestMultiError) AllErrors() []error { return m }
+
+// GetApplyFormRequestValidationError is the validation error returned by
+// GetApplyFormRequest.Validate if the designated constraints aren't met.
+type GetApplyFormRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetApplyFormRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetApplyFormRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetApplyFormRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetApplyFormRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetApplyFormRequestValidationError) ErrorName() string {
+	return "GetApplyFormRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetApplyFormRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetApplyFormRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetApplyFormRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetApplyFormRequestValidationError{}
+
+// Validate checks the field values on GetApplyFormResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetApplyFormResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetApplyFormResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetApplyFormResponseMultiError, or nil if none found.
+func (m *GetApplyFormResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetApplyFormResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for FormSchema
+
+	if len(errors) > 0 {
+		return GetApplyFormResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetApplyFormResponseMultiError is an error wrapping multiple validation
+// errors returned by GetApplyFormResponse.ValidateAll() if the designated
+// constraints aren't met.
+type GetApplyFormResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetApplyFormResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetApplyFormResponseMultiError) AllErrors() []error { return m }
+
+// GetApplyFormResponseValidationError is the validation error returned by
+// GetApplyFormResponse.Validate if the designated constraints aren't met.
+type GetApplyFormResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetApplyFormResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetApplyFormResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetApplyFormResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetApplyFormResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetApplyFormResponseValidationError) ErrorName() string {
+	return "GetApplyFormResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetApplyFormResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetApplyFormResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetApplyFormResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetApplyFormResponseValidationError{}
+
 // Validate checks the field values on WithdrawApplyRequest with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
